# qt-state-lab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux.yml  release.yml
app/: AppState.cpp  AppState.h  SettingsManager.cpp  SettingsManager.h
ui/: Main.qml
ui/components/: AppButton.qml
ui/overlays/: ErrorOverlay.qml  LoadingOverlay.qml
ui/screens/: HomeScreen.qml
